Update Althea and ripple blossom

--- a/dual-balance.html
+++ b/dual-balance.html
@@ -206,19 +206,18 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-8 col-md-offset-2">
-                    <h3>Contact</h3>
+                    <h3>CONTACT</h3>
                     <ul class="list-inline">
                         <li>
                             <a href="mailto:yidiz@andrew.cmu.edu" class="btn-social btn-outline"><i
                                     class="fa fa-envelope"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
-                                    class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+                            <a href="https://github.com/zhuyidiwow" class="btn-social btn-outline"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/zhuyidiwow" class="btn-social btn-outline"><i
-                                    class="fa fa-fw fa-facebook"></i></a>
+                            <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
+                                    class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
                         </li>
                         <li>
                             <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
