--- a/ripple-blossom.html
+++ b/ripple-blossom.html
@@ -71,18 +71,18 @@
             <article>
                 <h2>Ripple Blossom</h2>
                 <hr class="star-primary">
-                <h3>General Information</h3>
+                <h3>Project Info</h3>
                 <div class="table-responsive">
                     <table class="table table-striped">
                     <tbody>
                         <tr>
-                            <td>Project Duration</td>
-                            <td>5 months</td>
+                            <td>Duration</td>
+                            <td>8 months part-time (Jan - August, 2017)</td>
                         </tr>
 
                         <tr>
                             <td>Team Size</td>
-                            <td>6</td>
+                            <td>6 (2 programmers, 1 UI programmer, 2 artists, 1 level designer)</td>
                         </tr>
 
                         <tr>
@@ -96,33 +96,35 @@
                         </tr>
 
                         <tr>
-                            <td>My Role</td>
-                            <td>Game designer, programmer</td>
+                            <td>My Contributions</td>
+                            <td>Mechanics design, gameplay programming, team management</td>
                         </tr>
                     </tbody>
                     </table>
                 </div>
                 <!-- /table-responsive -->
+                <hr class="star-primary">
+                <h3>Noticeable Experience</h3>
+                <ol>
+                    <li>Lead a development team to bring a game from an idea to its best form</li>
+                    <li>Overcame difficulties in: decision making, preparation for launch, partner relationship</li>
+                    <li>Achieved 7,000 downloads with minimal marketing and secured a publisher</li>
+                </ol>
+                <hr class="star-primary">
+                <h3>Trailer</h3>
+                <div class='video-wrapper'>
+                    <iframe class="video" src="https://www.youtube.com/embed/UWv2LWJ9d3Q" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <hr class="star-primary">
 
-                <div>
-                    <p>
-                        <img src="resources/images/portfolio/8-ripple-blossom/title.png" class="img-responsive">
-                    </p>
-                    <p>
-                        <i>Ripple Blossom</i> was first prototyped during Global Game Jam (GGJ) 2017 Hong Kong site, under the theme of "Waves". This was my first game jam and first time working in ! However, our team got the <b>Best Theme Integration</b> award!
-                    </p>
+                <h3>Introduction</h3>
+                <p>
+                    <b>Ripple Blossom</b> was first prototyped during <a href="http://globalgamejam.org/2017/games/ripple-blossom-king-salted-fish">Global Game Jam (GGJ) 2017 Hong Kong site</a>, under the theme of "Waves". This was my first game jam and first time working in big teams. Our team won the <b>Best Theme Integration</b> award!
+                </p>
 
-                    <p> 
-                        The theme of GGJ 2017 is <i>"waves"</i>. We made a <a href="http://globalgamejam.org/2017/games/ripple-blossom-king-salted-fish">game</a> about ripples in a pool. Players use the power of ripples to wave sleeping lotus. Here is the video.
-                    </p>
-
-                    <p>
-                        <div class='video-wrapper'>
-                        <iframe class="video" src="https://www.youtube.com/embed/UWv2LWJ9d3Q" frameborder="0" allowfullscreen></iframe>
-                        </div>
-                    </p>
-
-                    <p class="notes text-center">We just found a publisher and are preparing for a new launch in December. More details will be available soon...</p>
+                <p>
+                    After the game jam, we polished the game and published it in China. It received more than 7,000 downdloads during the first week. As we don't have expertise in marketing, we secured a publisher in October 2017, and are preparing for a new global launch for this game.
+                </p>
                     
                     <!--
                     <p>
@@ -197,19 +199,18 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-8 col-md-offset-2">
-                    <h3>Contact</h3>
+                    <h3>CONTACT</h3>
                     <ul class="list-inline">
                         <li>
                             <a href="mailto:yidiz@andrew.cmu.edu" class="btn-social btn-outline"><i
                                     class="fa fa-envelope"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
-                                    class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+                            <a href="https://github.com/zhuyidiwow" class="btn-social btn-outline"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/zhuyidiwow" class="btn-social btn-outline"><i
-                                    class="fa fa-fw fa-facebook"></i></a>
+                            <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i
+                                    class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
                         </li>
                         <li>
                             <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
