--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             I'm currently looking for 2018 summer internship in <b>gameplay engineering</b> and <b>technical design.</b>
                         </p>
                         <p>
-                            Hi there, I'm Yidi, a passionate game designer and programmer. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the Entertainment Technology Center of Carnegie Mellon University. I dedicate myself to making games that have positive impact on people, and the world!
+                            Hi there, I'm Yidi, a passionate game designer and programmer. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the Entertainment Technology Center of Carnegie Mellon University. I dedicate myself to making artful and meaningful games that have positive impact on people, and the world!
                         </p>
                         <!--
                         <p>
