Change categorizer position

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2>Featured Work</h2>
-
+                <hr class="star-light">
                 <ul id="categorizer" class="list-inline">
                     <li id="all">
                         All
@@ -121,7 +121,7 @@
                         Mobile
                     </li>
                 </ul>
-                <hr class="star-light">
+                
             </div>
         </div>
         <div class="row">
@@ -159,7 +159,7 @@
                 <div class="portfolio-item">
                     <a href="http://www.yidizhu.com/yicon.html" data-toggle="modal">
                         <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">YiCon | Serious Game</p>
+                        <p class="portfolio-title">YiCon | Serious game</p>
                         <p class="portfolio-intro">Research Project | PC</p>
                     </a>
                 </div>
