Add link to tianyi's website

--- a/the-sea.html
+++ b/the-sea.html
@@ -181,7 +181,7 @@
 
                 <h3>Special Thanks</h3>
                 <p>
-                    Thanks a lot to <i>Tianyi Zhao</i> who volunteered to write and record the music for this game!
+                    Thanks a lot to <a href="http://tianyizhao.com">Tianyi Zhao</a> who volunteered to write and record the music for this game!
                 </p>
 
                 <h3>Screenshots</h3>  
