--- a/bopit.html
+++ b/bopit.html
@@ -71,37 +71,38 @@
             <article>
                 <h2>Bop It Extreme Home Edition</h2>
                 <hr class="star-primary">
-                <h3>General Information</h3>
+                <h3>Project Info</h3>
                 <div class="table-responsive">
                     <table class="table table-striped">
                     <tbody>
                         <tr>
                             <td>Project Duration</td>
-                            <td>1 week</td>
+                            <td>1 week (Oct 3 - Oct 10, 2017)</td>
                         </tr>
 
                         <tr>
                             <td>Team Size</td>
-                            <td>5</td>
-                        </tr>
-                        
-                        <tr>
-                            <td>My Contributions</td>
-                            <td>UI Design, Programming, Wood work</td>
+                            <td>5 (2 programmers, 2 artists, 1 sound designer)</td>
                         </tr>
 
                         <tr>
-                            <td>Theme</td>
+                            <td>Assigned Theme</td>
                             <td>A fun-focused virtual world in a week</td>
-                        </tr>
-                        <tr>
-                            <td>Genre</td>
-                            <td>Competitive local 2-player arcade machine</td>
                         </tr>
 
                         <tr>
                             <td>Platform</td>
                             <td>Makey Makey + Handmade machine</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team members</td>
+                            <td>Yvette Han, Urvil Shah, Dan Wolpow</td>
+                        </tr>
+
+                        <tr>
+                            <td>My Contributions</td>
+                            <td>UI Design, Programming, Wood work</td>
                         </tr>
                     </tbody>
                     </table>
@@ -110,11 +111,12 @@
                 <!-- /table-responsive -->
 
                 <hr class="star-primary">
+                <h3>Gameplay video</h3>
                 <div class="video-wrapper">
                     <iframe src="https://www.youtube.com/embed/mZux3TBzCJ4" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <hr class="star-primary">
-                <h3>Brief Description</h3>
+                <h3>Introduction</h3>
                 <p>
                     The objective of this assignment is to focus on the <i>fun</i> part of a game and make a highly fun, engaging activity. So we decided to extend the original <i>Bop It</i> game and make it a local 2-player competitive experience with large scale machines.
                 </p>
