--- a/maestro.html
+++ b/maestro.html
@@ -71,33 +71,38 @@
             <article>
                 <h2>Maestro</h2>
                 <hr class="star-primary">
-                <h3>General Information</h3>
+                <h3>Project Info</h3>
                 <div class="table-responsive">
                     <table class="table table-striped">
                     <tbody>
                         <tr>
                             <td>Project Duration</td>
-                            <td>2 weeks</td>
+                            <td>2 weeks (Sep 19 - Oct 3, 2017)</td>
                         </tr>
 
                         <tr>
                             <td>Team Size</td>
-                            <td>4</td>
-                        </tr>
-                        
-                        <tr>
-                            <td>My Contributions</td>
-                            <td>Game design, programming, playtesting</td>
+                            <td>4 (2 programmers + 1 artist + 1 sound designer)</td>
                         </tr>
 
                         <tr>
-                            <td>Theme</td>
-                            <td>Naïve guest + Feeling of freedom</td>
+                            <td>Assigned Theme</td>
+                            <td>Naïve guest + Feel of freedom</td>
                         </tr>
 
                         <tr>
                             <td>Platform</td>
                             <td>HTC Vive</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team members</td>
+                            <td>Yvette Han, Urvil Shah, Dan Wolpow</td>
+                        </tr>
+
+                        <tr>
+                            <td>My Contributions</td>
+                            <td>Game design, lead programming, playtesting</td>
                         </tr>
                     </tbody>
                     </table>
@@ -112,7 +117,7 @@
                     <iframe src="https://www.youtube.com/embed/H-52hrKzx5A" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <hr class="star-primary">
-                <h3>Brief Description</h3>
+                <h3>Introduction</h3>
                 <p>
                     This game delivers the feel of freedom by giving the guest the ability to conduct music and change the whole world with his way of conducting.
                 </p>
