--- a/sound-bearier.html
+++ b/sound-bearier.html
@@ -76,28 +76,33 @@
                     <table class="table table-striped">
                     <tbody>
                         <tr>
-                            <td>Project Duration</td>
-                            <td>2 weeks</td>
+                            <td>Duration</td>
+                            <td>2 weeks (Sep 5 - Sep 19, 2017)</td>
                         </tr>
 
                         <tr>
                             <td>Team Size</td>
-                            <td>5</td>
+                            <td>5 (2 programmers + 2 artists + 1 sound designer)</td>
                         </tr>
                         
                         <tr>
-                            <td>My Contributions</td>
-                            <td>Programming, testing</td>
-                        </tr>
-
-                        <tr>
-                            <td>Theme</td>
+                            <td>Assigned Theme</td>
                             <td>The guest helps character A who is afraid of character B</td>
                         </tr>
 
                         <tr>
                             <td>Platform</td>
                             <td>Hololens + Handmade props</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team members</td>
+                            <td>Iris Hwang, Srujani Kamineni, Jacob Wilson, Yutian Zheng</td>
+                        </tr>
+
+                        <tr>
+                            <td>My Contributions</td>
+                            <td>Programming, testing</td>
                         </tr>
                     </tbody>
                     </table>
