--- a/the-sea.html
+++ b/the-sea.html
@@ -71,14 +71,14 @@
             <article>
                 <h2>The Sea</h2>
                 <hr class="star-primary">
-                <h3>General Information</h3>
+                <h3>Project Info</h3>
 
                 <div class="table-responsive">
                     <table class="table table-striped">
                     <tbody>
                         <tr>
                             <td>Project Duration</td>
-                            <td>1 week</td>
+                            <td>1 week (Aug 29 - Sep 5, 2017)</td>
                         </tr>
 
                         <tr>
@@ -97,7 +97,7 @@
                         </tr>
 
                         <tr>
-                            <td>My Role</td>
+                            <td>My Contributions</td>
                             <td>Everything except music</td>
                         </tr>
                         <tr>
@@ -117,7 +117,7 @@
                 </div>
                 <hr class="star-primary">
 
-                <h3>Brief Description</h3>
+                <h3>Introduction</h3>
                 <p>
                     This game tells the journey of a lantern boat. It's put into the river, goes through all kinds of situations and finally gets to the sea, where all dreams come true. The player's goal is to guide the boat through the journey by rotating its sail.
                 </p>
