--- a/you-are-fired.html
+++ b/you-are-fired.html
@@ -71,7 +71,7 @@
             <article>
                 <h2>You're Fired</h2>
                 <hr class="star-primary">
-                <h3>General Information</h3>
+                <h3>Project Info</h3>
                 <div class="table-responsive">
                     <table class="table">
                     <tbody>
@@ -82,22 +82,27 @@
 
                         <tr>
                             <td>Team Size</td>
-                            <td>5</td>
+                            <td>5 (2 programmers + 2 aritsts + 1 sound designer)</td>
                         </tr>
                         
                         <tr>
-                            <td>My Contributions</td>
-                            <td>Programming, playtesting</td>
+                            <td>Platform</td>
+                            <td>Virtuix Omni + Oculus Touch</td>
                         </tr>
 
                         <tr>
                             <td>Theme</td>
                             <td>Tell an interactive story</td>
                         </tr>
+                        
+                        <tr>
+                            <td>Team members</td>
+                            <td>Tera, Tai, Nisha, Qianye</td>
+                        </tr>
 
                         <tr>
-                            <td>Platform</td>
-                            <td>Virtuix Omni + Oculus Touch</td>
+                            <td>My Contributions</td>
+                            <td>Lead programming, design iterations</td>
                         </tr>
                     </tbody>
                     </table>
@@ -109,7 +114,7 @@
                     <iframe src="https://www.youtube.com/embed/NhGNq0G6KHs" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <hr class="star-primary">
-                <h3>Brief Description</h3>
+                <h3>Introduction</h3>
                 <p>
                     This project is built for round 4 of <i>Building Virtual Worlds</i> at <i>Entertainment Technology Center</i>. The focus of this round is to tell an engaging interactive story. 
 
