--- a/you-are-fired.html
+++ b/you-are-fired.html
@@ -73,7 +73,7 @@
                 <hr class="star-primary">
                 <h3>Project Info</h3>
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-striped">
                     <tbody>
                         <tr>
                             <td>Project Duration</td>
