--- a/ripple-blossom.html
+++ b/ripple-blossom.html
@@ -104,7 +104,7 @@
                 </div>
                 <!-- /table-responsive -->
                 <hr class="star-primary">
-                <h3>Noticeable Experience</h3>
+                <h3>Notable Experience</h3>
                 <ol>
                     <li>Lead a development team to bring a game from an idea to its best form</li>
                     <li>Overcame difficulties in: decision making, preparation for launch, partner relationship</li>
