Change blog page layout

--- a/about.html
+++ b/about.html
@@ -93,22 +93,22 @@
 
                 <hr class="star-primary">
 
-                <p><b>1. Games are art.</b></p>
+                <p class="small-btm-margin"><b>1. Games are art.</b></p>
                 <p>
                     I'm an advocate for <b>"Games are art"</b>. Part of it is because games can be visually and aurally stunning, but more importantly, the interactivity in games makes them stand out from other art forms. <b>Mechanics</b> are the most powerful way to invoke emotions and inspire people.
                 </p>
 
-                <p><b>2. Designs serve goals.</b></p>
+                <p class="small-btm-margin"><b>2. Designs serve goals.</b></p>
                 <p>
                     Each game should has its major goals it wants to achieve and each single design decision should be made to better serve the goals. It's a good way to prevent designs from going too far.
                 </p>
 
-                <p><b>3. Feedbacks. And more feedbacks.</b></p>
+                <p class="small-btm-margin"><b>3. Feedbacks. And more feedbacks.</b></p>
                 <p>
                     Strong and rich feedbacks are the key to immersive experiences. I try to give as rich feedbacks as possible for each interaction. They can be visual, aural, or even tactile when possible. Interactions without rich feedback should not exist in games <i>(unless they are conscious decisions that serve certain design goals)</i>.
                 </p>
 
-                <p><b>4. Iterations are the key.</b></p>
+                <p class="small-btm-margin"><b>4. Iterations are the key.</b></p>
                 <p>
                     Each game should start small as a prototype and grow through iterations. There is more than once when I started from a small prototype, playtest it, iterate on it, and finally build something really cool. And there is more than once when playtesters saved my design.
                 </p>
