Add links to github

--- a/the-sea.html
+++ b/the-sea.html
@@ -101,8 +101,10 @@
                             <td>Everything except music</td>
                         </tr>
                         <tr>
+                            <td>Related Links</td>
                             <td colspan="2">
-                                <a href="https://docs.google.com/document/d/1tlA08-GOfWVLL5cbNPVofL3_RNV4_f2ibyWNgul_sdI/edit?usp=sharing" target="_blank"><i class="fa fa-book" aria-hidden="true"></i>  Link to game design document</a>
+                                <p class="small-btm-margin"><a href="https://docs.google.com/document/d/1tlA08-GOfWVLL5cbNPVofL3_RNV4_f2ibyWNgul_sdI/edit?usp=sharing" target="_blank"><i class="fa fa-book" aria-hidden="true"></i>  Game design document</a></p>
+                                <p class="small-btm-margin"><a href="https://github.com/zhuyidiwow/The-Sea" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Github repository</a></p>
                             </td>
                         </tr>
                     </tbody>
