--- a/yicon.html
+++ b/yicon.html
@@ -100,15 +100,15 @@
                             <td>Unity, C#</td>
                         </tr>
                         <tr>
-                            <td>Related</td>
+                            <td>Related links</td>
                             <td>
+                                <p class="small-btm-margin"><a href="https://docs.google.com/presentation/d/1Ulw18wLfr8M6iTSeXTvYHvC_AwO76GKaA605ejKQ_Tc/edit?usp=sharing" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>Presentation slides</a><br></p>
 
-                                <p class="small-btm-margin"><a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>   Game download</a><br></p>
+                                <p class="small-btm-margin"><a href="https://github.com/zhuyidiwow/Construction"" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>Github repository</a><br></p>
 
+                                <p class="small-btm-margin"><a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>Game download</a><br></p>
 
-                                <p class="small-btm-margin"><a href="http://www.yidizhu.com/resources/documents/yi-con-manual.pdf" target="_blank"><i class="fa fa-book" aria-hidden="true"></i>   User manual</a><br></p>
-
-                                <p class="small-btm-margin"><a href="https://docs.google.com/presentation/d/1Ulw18wLfr8M6iTSeXTvYHvC_AwO76GKaA605ejKQ_Tc/edit?usp=sharing" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>   Presentation slides</a><br></p>
+                                <p class="small-btm-margin"><a href="http://www.yidizhu.com/resources/documents/yi-con-manual.pdf" target="_blank"><i class="fa fa-book" aria-hidden="true"></i>User manual</a><br></p>
                             </td>
                         </tr>
                     </tbody>
