Add images for maestro

--- a/yicon.html
+++ b/yicon.html
@@ -211,28 +211,28 @@
                         </div>
             
                         <div class="item">
-                            <img src="resources/images/portfolio/4yiCon/7-best-viewport.png" alt="New York">
+                            <img src="resources/images/portfolio/4yiCon/7-best-viewport.png" alt="">
                             <div class="carousel-caption">
                                 <h3></h3>
                             </div>
                         </div>
 
                         <div class="item">
-                            <img src="resources/images/portfolio/4yiCon/13-construction-display-info.png" alt="New York">
+                            <img src="resources/images/portfolio/4yiCon/13-construction-display-info.png" alt="">
                             <div class="carousel-caption">
                                 <h3></h3>
                             </div>
                         </div>
 
                         <div class="item">
-                            <img src="resources/images/portfolio/4yiCon/10 Daily Report Overmanning.png" alt="New York">
+                            <img src="resources/images/portfolio/4yiCon/10 Daily Report Overmanning.png" alt="">
                             <div class="carousel-caption">
                                 <h3></h3>
                             </div>
                         </div>
 
                         <div class="item">
-                            <img src="resources/images/portfolio/4yiCon/15 Win Report.png" alt="New York">
+                            <img src="resources/images/portfolio/4yiCon/15 Win Report.png" alt="">
                             <div class="carousel-caption">
                                 <h3></h3>
                             </div>
