changes to sound bearier

--- a/sound-bearier.html
+++ b/sound-bearier.html
@@ -71,7 +71,7 @@
             <article>
                 <h2>The Soundbearier</h2>
                 <hr class="star-primary">
-                <h3>General Information</h3>
+                <h3>Project Info</h3>
                 <div class="table-responsive">
                     <table class="table table-striped">
                     <tbody>
@@ -118,7 +118,7 @@
                     <iframe src="https://www.youtube.com/embed/oUs442UmtII" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <hr class="star-primary">
-                <h3>Brief Description</h3>
+                <h3>Introduction</h3>
                 <p>
                     In this project, we leveraged the capabilities of Hololens as much as we could. Although this world is quite tiny with player time less than 2 minutes, we used <i>voice recognition</i>, <i>gazing</i>, <i>gesture detection</i>, <i>movement</i>, <i>spatial mapping</i>, and <i>occulusion mapping</i>.
                 </p>
