Move articles to their own folder

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured vr">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/althea.html" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/althea.html" data-toggle="modal">
                         <img src="resources/images/portfolio/tree.png" class="img-responsive" alt="">
                         <p class="portfolio-title">Althea | Co-op VR</p>
                     </a>
@@ -136,7 +136,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured mobile">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/ripple-blossom.html" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/ripple-blossom.html" data-toggle="modal">
                         <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
                         <p class="portfolio-title">Ripple Blossom | Indie game</p>
                         <p class="portfolio-intro">Published mobile indie game</p>
@@ -147,7 +147,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured pc">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/the-sea.html" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/the-sea.html" data-toggle="modal">
                         <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
                         <p class="portfolio-title">The Sea | Solo project</p>
                         <p class="portfolio-intro">Course Project on PC</p>
@@ -157,7 +157,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper featured pc">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/yicon.html" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/yicon.html" data-toggle="modal">
                         <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
                         <p class="portfolio-title">YiCon | Serious game</p>
                         <p class="portfolio-intro">Research Project | PC</p>
@@ -167,7 +167,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper vr">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/maestro.html" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/maestro.html" data-toggle="modal">
                         <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
                         <p class="portfolio-title">Maestro | HTV Vive</p>
                         <p class="portfolio-intro">Course Project on HTC Vive</p>
@@ -177,7 +177,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper mobile">
                 <div class="portfolio-item">
-                    <a href="http:///www.yidizhu.com/dual-balance.html" data-toggle="modal">
+                    <a href="http:///www.yidizhu.com/articles/dual-balance.html" data-toggle="modal">
                         <img src="resources/images/portfolio/dual-balance.png" class="img-responsive" alt="">
                         <p class="portfolio-title">Dual Balance | Co-op mobile</p>
                         <p class="portfolio-intro">Course Project on Mobile</p>
@@ -187,7 +187,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper vr">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/you-are-fired.html" class="portfolio-link" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/you-are-fired.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
                         <p class="portfolio-title">You're Fired | Omni + Oculus</p>
                         <p class="portfolio-intro">Course Project | Omni & Oculus Touch</p>
@@ -197,7 +197,7 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper pc">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/bopit.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
                         <p class="portfolio-title">Bopit Extreme | Maykey Makey</p>
                         <p class="portfolio-intro">Course Project | Makey Makey</p>
@@ -208,142 +208,17 @@
 
             <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper vr">
                 <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
+                    <a href="http://www.yidizhu.com/articles/sound-bearier.html" class="portfolio-link" data-toggle="modal">
                         <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
                         <p class="portfolio-title">The Sound Bearier | HoloLens</p>
                         <p class="portfolio-intro">Course Project | HoloLens</p>
                     </a>
                 </div>
             </div>
-<!--
-            <div class="col-lg-3 col-md-6 col-sm-6 item-wrapper pc">
-                <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
-                        <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">Totally Accurate Primitive Simulator</p>
-                        <p class="portfolio-intro">Course Project | PC</p>
-                    </a>
-                </div>
-            </div>
-
-        
-            <div class="col-lg-4 col-md-6 col-sm-6 item-wrapper">
-                <a href="http://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>Primal Space</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/primal-space.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project</p>
-            </div>
-        -->
 
         </div>
     </div>
 </section>
-
-<!--
-<section id="game-programming" class="portfolio">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h2>Game Programming</h2>
-                <hr class="star-light">
-            </div>
-        </div>
-        <div class="row">
-
-            <div class="col-lg-4 col-md-6 item-wrapper">
-                <div class="portfolio-item">
-                    <a href="http://www.yidizhu.com/maestro.html" data-toggle="modal">
-                        <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">Maestro</p>
-                        <p class="portfolio-intro">Course Project on HTC Vive</p>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 item-wrapper">
-                <div class="portfolio-item">
-                    <a href="http:///www.yidizhu.com/dual-balance.html" data-toggle="modal">
-                        <img src="resources/images/portfolio/dual-balance.png" class="img-responsive" alt="">
-                        <p class="portfolio-title">Dual Balance</p>
-                        <p class="portfolio-intro">Course Project on Mobile</p>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="portfolio-item">
-                <a href="http://www.yidizhu.com/you-are-fired.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>You're Fired</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/you're fired.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | Omni & Oculus Touch</p>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="portfolio-item">
-                <a href="http://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>Bop It Extreme Home Edition</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | Makey Makey</p>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="portfolio-item">
-                <a href="http://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>The Soundbearier</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | HoloLens</p>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="portfolio-item">
-                <a href="http://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>Primal Life</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project | PC</p>
-            </div>
-
-
-            <div class="col-lg-4 col-md-6 portfolio-item">
-                <a href="http://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i>Primal Space</i>
-                        </div>
-                    </div>
-                    <img src="resources/images/portfolio/primal-space.png" class="img-responsive" alt="">
-                </a>
-                <p class="portfolio-title">Course Project</p>
-            </div>
-
-        </div>
-    </div>
-</section>
--->
 
 <!-- Footer -->
 <footer class="text-center">
